Fixed footer spacing. Replaced flex with grid in css. Moved logo to left side.

--- a/css/styles.css
+++ b/css/styles.css
@@ -147,8 +147,8 @@ footer {
     width: 100%;
     padding-top: 5%;
     padding-bottom:5%;
-    display: flex;
-    justify-content: space-evenly;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
     align-items: center; 
 }
 
